<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pr_idi.mydatabaseexample.AltaLlibreActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:text="@string/titol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/titol"
                android:id="@+id/atitol"
                android:textAlignment="center"
                android:selectAllOnFocus="false" />

            <TextView
                android:text="@string/autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/aautor"
                android:hint="@string/autor"
                android:textAlignment="center" />

            <TextView
                android:text="@string/any"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/any"
                android:id="@+id/aany"
                android:textAlignment="center" />

            <TextView
                android:text="@string/editorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editorial"
                android:id="@+id/aeditorial"
                android:textAlignment="center" />

            <TextView
                android:text="@string/categoria"
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_spinner_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_spinner_down" />

                <Spinner
                    android:id="@+id/acategoria"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:layout_marginRight="8dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <TextView
                android:text="@string/valoracio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_spinner_background"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/avaloracio"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:layout_marginRight="8dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_spinner_down" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/afegir"
                android:id="@+id/aafegir" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
